src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__method_codegen_with_multiple_input.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: prg
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%fb = type {}

@__fb__init = unnamed_addr constant %fb zeroinitializer

define void @fb(%fb* %0) {
entry:
  %this = alloca %fb*, align [filtered]
  store %fb* %0, %fb** %this, align [filtered]
  %call = call i32 @fb__meth(%fb* %0, i32 1, i32 2, i32 3)
  %call1 = call i32 @fb__meth(%fb* %0, i32 5, i32 7, i32 10)
  %call2 = call i32 @fb__meth(%fb* %0, i32 3, i32 4, i32 10)
  %call3 = call i32 @fb__meth(%fb* %0, i32 6, i32 4, i32 10)
  ret void
}

define i32 @fb__meth(%fb* %0, i32 %1, i32 %2, i32 %3) {
entry:
  %this = alloca %fb*, align [filtered]
  store %fb* %0, %fb** %this, align [filtered]
  %fb.meth = alloca i32, align [filtered]
  %a = alloca i32, align [filtered]
  store i32 %1, i32* %a, align [filtered]
  %b = alloca i32, align [filtered]
  store i32 %2, i32* %b, align [filtered]
  %c = alloca i32, align [filtered]
  store i32 %3, i32* %c, align [filtered]
  store i32 0, i32* %fb.meth, align [filtered]
  %fb__meth_ret = load i32, i32* %fb.meth, align [filtered]
  ret i32 %fb__meth_ret
}
