src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__method_with_aggregate_return_type.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@utf08_literal_0 = private unnamed_addr constant [6 x i8] c"Hello\00"

define void @fb_with_method(ptr %0) {
entry:
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  %ret = alloca [81 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %ret, i8 0, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  %__method_with_aggregagte_return0 = alloca [81 x i8], align [filtered]
  call void @llvm.lifetime.start.p0(i64 -1, ptr %__method_with_aggregagte_return0)
  call void @llvm.memset.p0.i64(ptr align [filtered] %__method_with_aggregagte_return0, i8 0, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  call void @fb_with_method__method_with_aggregagte_return(ptr %0, ptr %__method_with_aggregagte_return0, ptr @utf08_literal_0)
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %ret, ptr align [filtered] %__method_with_aggregagte_return0, i32 80, i1 false)
  call void @llvm.lifetime.end.p0(i64 -1, ptr %__method_with_aggregagte_return0)
  ret void
}

define void @fb_with_method__method_with_aggregagte_return(ptr %0, ptr %1, ptr %2) {
entry:
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  %ret = alloca [81 x i8], align [filtered]
  %method_with_aggregagte_return = alloca ptr, align [filtered]
  store ptr %1, ptr %method_with_aggregagte_return, align [filtered]
  %in = alloca [81 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %in, i8 0, i64 81, i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %in, ptr align [filtered] %2, i64 80, i1 false)
  %deref = load ptr, ptr %method_with_aggregagte_return, align [filtered]
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %deref, ptr align [filtered] %in, i32 80, i1 false)
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #1

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #1

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.start.p0(i64 immarg, ptr captures(none)) #2

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.end.p0(i64 immarg, ptr captures(none)) #2

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #2 = { nocallback nofree nosync nounwind willreturn memory(argmem: readwrite) }
