src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__methods_var_output.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%foo = type {}

@utf08_literal_0 = private unnamed_addr constant [6 x i8] c"hello\00"

define void @foo(ptr %0) {
entry:
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  ret void
}

define void @foo__baz(ptr %0, ptr %1) {
entry:
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  %out = alloca ptr, align [filtered]
  store ptr %1, ptr %out, align [filtered]
  %2 = load ptr, ptr %out, align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %2, i8 0, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  %deref = load ptr, ptr %out, align [filtered]
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %deref, ptr align [filtered] @utf08_literal_0, i32 6, i1 false)
  ret void
}

define void @main() {
entry:
  %s = alloca [81 x i8], align [filtered]
  %fb = alloca %foo, align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %s, i8 0, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  call void @llvm.memset.p0.i64(ptr align [filtered] %fb, i8 0, i64 ptrtoint (ptr getelementptr (%foo, ptr null, i32 1) to i64), i1 false)
  call void @foo__baz(ptr %fb, ptr %s)
  call void @foo__baz(ptr %fb, ptr %s)
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #1

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
