src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__order_var_and_var_temp_block.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i16 }

@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %temp = alloca i16, align [filtered]
  %var1 = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  store i16 0, i16* %temp, align [filtered]
  ret void
}
