src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__pass_inout_to_inout.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%foo2 = type { i32*, i32 }
%foo = type { i32* }
%prg = type { i32 }

@foo2_instance = global %foo2 zeroinitializer
@foo_instance = global %foo zeroinitializer
@prg_instance = global %prg zeroinitializer

define void @foo2(%foo2* %0) {
entry:
  %inout = getelementptr inbounds %foo2, %foo2* %0, i32 0, i32 0
  %in = getelementptr inbounds %foo2, %foo2* %0, i32 0, i32 1
  ret void
}

define void @foo(%foo* %0) {
entry:
  %inout = getelementptr inbounds %foo, %foo* %0, i32 0, i32 0
  %deref = load i32*, i32** %inout, align [filtered]
  store i32* %deref, i32** getelementptr inbounds (%foo2, %foo2* @foo2_instance, i32 0, i32 0), align [filtered]
  %deref1 = load i32*, i32** %inout, align [filtered]
  %load_inout = load i32, i32* %deref1, align [filtered]
  store i32 %load_inout, i32* getelementptr inbounds (%foo2, %foo2* @foo2_instance, i32 0, i32 1), align [filtered]
  call void @foo2(%foo2* @foo2_instance)
  ret void
}

define void @prg(%prg* %0) {
entry:
  %baz = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store i32* %baz, i32** getelementptr inbounds (%foo, %foo* @foo_instance, i32 0, i32 0), align [filtered]
  call void @foo(%foo* @foo_instance)
  ret void
}
