src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__pointer_and_array_access_to_in_out.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @main(ptr %0, ptr %1) {
entry:
  %main = alloca i16, align [filtered]
  %a = alloca ptr, align [filtered]
  store ptr %0, ptr %a, align [filtered]
  %b = alloca ptr, align [filtered]
  store ptr %1, ptr %b, align [filtered]
  %c = alloca i16, align [filtered]
  store i16 0, ptr %c, align [filtered]
  store i16 0, ptr %main, align [filtered]
  %deref = load ptr, ptr %a, align [filtered]
  %deref1 = load ptr, ptr %deref, align [filtered]
  %load_tmpVar = load i16, ptr %deref1, align [filtered]
  store i16 %load_tmpVar, ptr %c, align [filtered]
  %deref2 = load ptr, ptr %b, align [filtered]
  %tmpVar = getelementptr inbounds [2 x i16], ptr %deref2, i32 0, i32 0
  %load_tmpVar3 = load i16, ptr %tmpVar, align [filtered]
  store i16 %load_tmpVar3, ptr %c, align [filtered]
  %main_ret = load i16, ptr %main, align [filtered]
  ret i16 %main_ret
}
