src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__pointers_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i8*, i8* }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %X = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %pX = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %rX = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  store i8* null, i8** %pX, align [filtered]
  store i8* null, i8** %rX, align [filtered]
  store i8* %X, i8** %pX, align [filtered]
  store i8* %X, i8** %rX, align [filtered]
  %deref = load i8*, i8** %pX, align [filtered]
  %load_tmpVar = load i8, i8* %deref, align [filtered]
  store i8 %load_tmpVar, i8* %X, align [filtered]
  %deref1 = load i8*, i8** %rX, align [filtered]
  %load_tmpVar2 = load i8, i8* %deref1, align [filtered]
  store i8 %load_tmpVar2, i8* %X, align [filtered]
  %deref3 = load i8*, i8** %pX, align [filtered]
  %load_X = load i8, i8* %X, align [filtered]
  store i8 %load_X, i8* %deref3, align [filtered]
  %deref4 = load i8*, i8** %rX, align [filtered]
  %load_X5 = load i8, i8* %X, align [filtered]
  store i8 %load_X5, i8* %deref4, align [filtered]
  ret void
}
